--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,12 +26,81 @@
                         <p class="author mt-2">
                             -{{ quote.author }}
                         </p>
-                        <a href="#posts" class="btn mt-5 b-r">
+                        <a href="#blogs" class="btn mt-5 b-r">
                             view recents posts
                         </a>
                     </div>
                 </div>
                 <div class="col-md-2"></div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- blog -->
+<section class="blog-section" id="posts">
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="row">
+                    <!-- display blogs -->
+                    {{ macro.displayBlogs(blog) }}
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="row">
+   
+                </div>
+                <div class="row mt-3">
+                    <div class="card p-3 col-md-12">
+                        <h5>Live Smarter</h5>
+                        <p></p>
+                        
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="card p-2">
+                        <div class="col-md-12 categories">
+                            <h5>Categories</h5>
+                            {% for category in categories %}
+                            <a class="btn btn-sm btn-outline-dark"
+                                href="{{ url_for('main.filter_blogs',id=blog.id) }}">{{ blog.name }}</a>
+                            {% endfor %}
+                            <!-- <a class="btn btn-sm btn-outline-dark">Business</a> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="card p-2 row mt-3 tops">
+                    <h5></h5>
+                    {% for blog in latest_blogs %}
+                    <a href="{{ url_for('main.single_blog',id=blog.id)}}">
+                        <hr>
+
+                            <div class="col-md-8">
+                                <p>
+                                    {{ blog.title }}
+                                    <br>
+                                    <small>
+                                        <span>
+                                            <i class="fa fa-user" style="font-size: 10px;"></i> {{
+                                            blog.posted_at.strftime('%d %b %Y') }}
+                                        </span>
+                                    </small>
+                                </p>
+                            </div>
+                        </div>
+                        <hr>
+                    </a>
+                    {% endfor %}
+                </div>
+                <div class="card p-3 row mt-2 mb-3">
+                    <h5>About</h5>
+                    <div class="col-md-12">
+                        <p>
+                            Personal blogging website where you can create and share your opinions and other users can
+                            read and comment on them
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
