--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,31 @@
 </div>
 
 <div class="container-fluid">
-    
+    <section class="homepage">
+        <div class="home">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8 text-center">
+                        <div class="homepage-content">
+                            <h3>
+                                <q>
+                                    {{ quote.quote }}
+                                </q>
+                            </h3>
+                            <p class="author mt-2">
+                                -{{ quote.author }}
+                            </p>
+                            <a href="#posts" class="btn mt-5 b-r">
+                                view recents posts
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-2"></div>
+                </div>
+            </div>
+        </div>
+    </section>
     <div class="container">
         <div class="row">
             <div class="col-md-4">
