add a quote in the homepage

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,11 +27,11 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8 text-center">
                         <div class="homepage-content">
-                            <h3>
+                            <h4>
                                 <q>
                                     {{ quote.quote }}
                                 </q>
-                            </h3>
+                            </h4>
                             <p class="author mt-2">
                                 -{{ quote.author }}
                             </p>
@@ -49,23 +49,83 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="well well-lg">
-                    <h3 style="font-family: 'Cookie', cursive;">Motivational</h3>
+                    <h3 style="font-family: 'Cookie', cursive;">E-Commerce</h3>
                     <p class="parag">These motivational pitches will encourage and inspire you in just a minute.</p>
-                    <a href="{{url_for('main.ecom_blog')}}" class="btn btn-primary -center">View</a>
+                    <a href="{{url_for('main.ecom_blog')}}" class="btn btn-primary -center">Read</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="well well-lg">
                     <h3 style="font-family: 'Cookie', cursive;">Business</h3>
                     <p class="parag">Get your financial tips and keys to grow your business or to increase your financial status and grow your money</p>
-                    <a href="{{url_for('main.ftech_blog')}}" class="btn btn-primary -center">View</a>
+                    <a href="{{url_for('main.ftech_blog')}}" class="btn btn-primary -center">Read</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="well well-lg">
-                    <h3 style="font-family: 'Cookie', cursive;">Entertainment</h3>
+                    <h3 style="font-family: 'Cookie', cursive;">Future Technologies</h3>
                     <p class="parag">Entertain yourself with your followers and get entertained too..</p>
-                    <a href="{{url_for('main.webdev_blog')}}" class="btn btn-primary -center">View</a>
+                    <a href="{{url_for('main.webdev_blog')}}" class="btn btn-primary -center">Read</a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8 text-center">
+                <h4>
+                    {{ quote.quote }}
+                </h4>
+                <p class="author mt-2">
+                    -{{ quote.author }}
+                </p>
+                <a href="#posts" class="btn mt-5 b-r">
+                    view recents posts
+                </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="well well-lg">
+                    <h3 style="font-family: 'Cookie', cursive;">E-Commerce</h3>
+                    <p class="parag">These motivational pitches will encourage and inspire you in just a minute.</p>
+                    <a href="{{url_for('main.ecom_blog')}}" class="btn btn-primary -center">Read</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="well well-lg">
+                    <h3 style="font-family: 'Cookie', cursive;">Business</h3>
+                    <p class="parag">Get your financial tips and keys to grow your business or to increase your financial status and grow your money</p>
+                    <a href="{{url_for('main.ftech_blog')}}" class="btn btn-primary -center">Read</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="well well-lg">
+                    <h3 style="font-family: 'Cookie', cursive;">Future Technologies</h3>
+                    <p class="parag">Entertain yourself with your followers and get entertained too..</p>
+                    <a href="{{url_for('main.webdev_blog')}}" class="btn btn-primary -center">Read</a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="well well-lg">
+                    <h3 style="font-family: 'Cookie', cursive;">E-Commerce</h3>
+                    <p class="parag">These motivational pitches will encourage and inspire you in just a minute.</p>
+                    <a href="{{url_for('main.ecom_blog')}}" class="btn btn-primary -center">Read</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="well well-lg">
+                    <h3 style="font-family: 'Cookie', cursive;">Business</h3>
+                    <p class="parag">Get your financial tips and keys to grow your business or to increase your financial status and grow your money</p>
+                    <a href="{{url_for('main.ftech_blog')}}" class="btn btn-primary -center">Read</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="well well-lg">
+                    <h3 style="font-family: 'Cookie', cursive;">Future Technologies</h3>
+                    <p class="parag">Entertain yourself with your followers and get entertained too..</p>
+                    <a href="{{url_for('main.webdev_blog')}}" class="btn btn-primary -center">Read</a>
                 </div>
             </div>
         </div>
