--- a/app/templates/profile/blogs.html
+++ b/app/templates/profile/blogs.html
@@ -26,7 +26,7 @@
             <div class="col-md-12">
               <h3> Blogs </h3>
               <hr>
-               {{macro.displayBlogs(blogs)}}
+               {{macro.displayBlog(blog)}}
             </div>
         </div>
     </div>
