add content on the blog

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -50,14 +50,14 @@
             <div class="col-md-4">
                 <div class="well well-lg">
                     <h3 style="font-family: 'Cookie', cursive;">E-Commerce</h3>
-                    <p class="parag">These motivational pitches will encourage and inspire you in just a minute.</p>
+                    <p class="parag">Technology drives data, data catalyzes knowledge, and knowledge enables empowerment. In tomorrow’s world,.</p>
                     <a href="{{url_for('main.ecom_blog')}}" class="btn btn-primary -center">Read</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="well well-lg">
                     <h3 style="font-family: 'Cookie', cursive;">Business</h3>
-                    <p class="parag">Get your financial tips and keys to grow your business or to increase your financial status and grow your money</p>
+                    <p class="parag">The roll-out of 5G creates markets that we only imagine - like self-driving bots, along with a mobility-as-a-service economy - and others we can’t imagine</p>
                     <a href="{{url_for('main.ftech_blog')}}" class="btn btn-primary -center">Read</a>
                 </div>
             </div>
@@ -87,21 +87,21 @@
             <div class="col-md-4">
                 <div class="well well-lg">
                     <h3 style="font-family: 'Cookie', cursive;">E-Commerce</h3>
-                    <p class="parag">These motivational pitches will encourage and inspire you in just a minute.</p>
+                    <p class="parag">Overnight, we’ve experienced a sharp increase in delivery services with a need for “day-of” goods from providers like Amazon and Instacart - but it has been limited. .</p>
                     <a href="{{url_for('main.ecom_blog')}}" class="btn btn-primary -center">Read</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="well well-lg">
                     <h3 style="font-family: 'Cookie', cursive;">Business</h3>
-                    <p class="parag">Get your financial tips and keys to grow your business or to increase your financial status and grow your money</p>
+                    <p class="parag">Paper and pencil tracking, luck, significant global travel and opaque supply chains are part of today’s status quo, resulting in large amounts of wasted energy, materials and time. Accelerated in part by the long-term shutdown of international and regional travel by COVID-19, companies that design and build products</p>
                     <a href="{{url_for('main.ftech_blog')}}" class="btn btn-primary -center">Read</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="well well-lg">
                     <h3 style="font-family: 'Cookie', cursive;">Future Technologies</h3>
-                    <p class="parag">Entertain yourself with your followers and get entertained too..</p>
+                    <p class="parag">In 2025, carbon footprints will be viewed as socially unacceptable, much like drink driving is today. The COVID-19 pandemic will have focused the public’s attention .</p>
                     <a href="{{url_for('main.webdev_blog')}}" class="btn btn-primary -center">Read</a>
                 </div>
             </div>
@@ -110,7 +110,7 @@
             <div class="col-md-4">
                 <div class="well well-lg">
                     <h3 style="font-family: 'Cookie', cursive;">E-Commerce</h3>
-                    <p class="parag">These motivational pitches will encourage and inspire you in just a minute.</p>
+                    <p class="parag">One major application of this new kind of computer will be the simulation of complex chemical reactions, a powerful tool that opens up new avenues in drug development..</p>
                     <a href="{{url_for('main.ecom_blog')}}" class="btn btn-primary -center">Read</a>
                 </div>
             </div>
@@ -124,7 +124,7 @@
             <div class="col-md-4">
                 <div class="well well-lg">
                     <h3 style="font-family: 'Cookie', cursive;">Future Technologies</h3>
-                    <p class="parag">Entertain yourself with your followers and get entertained too..</p>
+                    <p class="parag">This trend will be enabled by AI-powered and systems biology-based technology that exponentially grows our knowledge of the role of specific dietary phytonutrients in specific human health and functional outcomes.</p>
                     <a href="{{url_for('main.webdev_blog')}}" class="btn btn-primary -center">Read</a>
                 </div>
             </div>
