--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,14 +12,13 @@
 {%endblock%}
 <!-- Content block -->
 {%block content%}
-<div class="jumbotron text-center" style="background-image:linear-gradient(#3BA5BF,#3EA286,#0386A4); color: #f5f5f5; padding: 100px 25px;">
+<div style="background-image:url(../static/photos/top.jpg;height:60vh;)" class="banner">
+    <div class="jumbotron text-center" ></div>
     <h1 style="font-family: 'Cookie', cursive;">GrOti Blog</h1>
 </div>
-<div class="container" style="padding-bottom: 20px;">
-    <a href="{{url_for('main.new_blog')}}" class="btn btn-success">Post blog</a>
 </div>
 
-<div class="container-fluid">
+<div style=" background:linear-gradient(#EDEEF2,#96816E,#877871) ;" class="container-fluid">
     <section class="homepage">
         <div class="home">
             <div class="container">
@@ -81,6 +80,9 @@
                 <a href="#posts" class="btn mt-5 b-r">
                     view recents posts
                 </a>
+            </div>
+            <div class="container text-center" style="padding-bottom: 20px;">
+                <a href="{{url_for('main.new_blog')}}" class="btn btn-success">Post blog</a>
             </div>
         </div>
         <div class="row">
