--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
 {%endblock%}
 <!-- Content block -->
 {%block content%}
-<div style="background-image:url(../static/photos/top.jpg;height:60vh;)" class="banner">
+<div class="banner">
     
 </div>
 </div>
