--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,14 +12,16 @@
 {%endblock%}
 <!-- Content block -->
 {%block content%}
-<div class="banner">
-    <div class="jumbotron text-center" ></div>
-    <h1 style="font-family: 'Cookie', cursive;">GrOti Blog</h1> 
-</div>
-</div>
-<div class="container text-center" style="padding-bottom: 20px;">
-    <a href="{{url_for('main.new_blog')}}" class="btn btn-success">Post blog</a>
-</div>
+
+    <div class="banner">
+        <div class="jumbotron text-center" >
+            <h1 style="font-family: 'Cookie', cursive; background-image: linear-gradient();">GrOti Blog</h1> 
+        </div>  
+    </div>
+    </div>
+    
+
+
 <div style=" background:linear-gradient(#EDEEF2,#96816E,#877871) ;" class="container-fluid">
     <section class="homepage">
         <div class="home">
@@ -39,6 +41,7 @@
                             <a href="#posts" class="btn mt-5 b-r">
                                 view recents posts
                             </a>
+                            <a href="{{url_for('main.new_blog')}}" class="btn btn-success">Post blog</a>
                         </div>
                     </div>
                     <div class="col-md-2"></div>
