add a gradient to banner

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,13 +15,11 @@
 
     <div class="banner">
         <div class="jumbotron text-center" >
-            <h1 style="font-family: 'Cookie', cursive; background-image: linear-gradient();">GrOti Blog</h1> 
+            <h1 style="font-family: 'Cookie', cursive; background-image: linear-gradient(#6A6977,#0D0C12,#47464C);">GrOti Blog</h1> 
         </div>  
     </div>
     </div>
     
-
-
 <div style=" background:linear-gradient(#EDEEF2,#96816E,#877871) ;" class="container-fluid">
     <section class="homepage">
         <div class="home">
