modify backgound colour

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,14 +13,12 @@
 <!-- Content block -->
 {%block content%}
 
-    <div class="banner">
-        <div class="jumbotron text-center" >
-            <h1 style="font-family: 'Cookie', cursive; background-image: linear-gradient(#6A6977,#0D0C12,#47464C);">GrOti Blog</h1> 
-        </div>  
-    </div>
-    </div>
-    
-<div style=" background:linear-gradient(#EDEEF2,#96816E,#877871) ;" class="container-fluid">
+
+<div style="background-image: linear-gradient(#585A51,#90C0E5,#688FB0);" class="jumbotron text-center" >
+    <h1 style="font-family: 'Cookie', cursive; ">GrOti Blog</h1> 
+</div>  
+  
+<div style=" background:linear-gradient(#E7EBEA,#87BCE6#4881C4) ;" class="container-fluid">
     <section class="homepage">
         <div class="home">
             <div class="container">
