--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
     <h1 style="font-family: 'Cookie', cursive; ">GrOti Blog</h1> 
 </div>  
   
-<div style=" background:linear-gradient(#E7EBEA,#87BCE6#4881C4) ;" class="container-fluid">
+<div style=" background:linear-gradient(#E7EBEA,#87BCE6,#4881C4) ;" class="container-fluid">
     <section class="homepage">
         <div class="home">
             <div class="container">
